# AQ-MAVROS

./: LICENSE  README.md
aq_mavros/: CMakeLists.txt  package.xml  readme.txt
aq_mavros/include/: readme.txt
aq_mavros/launch/: autoquad_interface.launch
aq_mavros/msg/: IntStamped.msg  drone_waypoint.msg
aq_mavros/src/: mavlink_waypoint_node.cpp
aq_mavros_demo/: CMakeLists.txt  fmMake.txt  package.xml  setup.py
aq_mavros_demo/launch/: drone_demo.launch
aq_mavros_demo/route_planner/: waypoints.txt
aq_mavros_demo/src/: aq_mavros_demo_node.py  keyboardEventListener.cpp
autoquad_interface/: CMakeLists.txt  package.xml  readme.txt
autoquad_interface/include/mavlink/v1.0/common/: common.h  mavlink_msg_command_long.h  mavlink_msg_heartbeat.h  mavlink_msg_hil_gps.h
autoquad_interface/msg/: drone_pos.msg  drone_pose.msg
autoquad_interface/src/: mavlink_waypoint_node.cpp
uas_nordic_2015/: CMakeLists.txt  fmMake.txt  package.xml  setup.py
uas_nordic_2015/launch/: drone_demo.launch  drone_demo_final.launch  drone_navigate.launch  drone_pos.launch  plugin_blacklist.yaml
uas_nordic_2015/msg/: distance.msg  drone_pos.msg
uas_nordic_2015/route_planner/: plan.sh  waypoints.kml
uas_nordic_2015/src/: drone_demo_node.py  drone_pos_node.py  waypoint_files.py  waypoint_files_test.py
